# ton-quant

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  ANALYTICS-IDEAS.md  ANALYTICS-PAGE-RESEARCH.md  DEPLOY-v2.md  MCP-SETUP.md  README.md  ROADMAP-v3.md  ROADMAP.md  compare.html  deploy.bat  deploy.sh  desk.html  health.html  index.html  integration.test.mjs  nav.test.mjs  paper.html  portfolio.html  screener.html  styles.css  token-old.html  token.html  token2.html  unit.test.mjs  wallets.html  xsmom.html
app/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.js
data/: allowlist.json  blocklist.json  cat_overrides.json  cats.json  dex_signals.json  funding.json  health.json  index.json  perp_markets.json  perp_signals.json  social.json  social_channels.json  universe.json  wallets.json  xs_audit.json  xs_forward_equity.json  xs_forward_state.json
docs/: CUSTOM-MCP.md  DESK-RISK-CONSTITUTION.md  DESK-SETUP-m1.md  PROJECT-MAP.md  V3.0-AI-SMART-MONEY-DESK.md  XS-MOMENTUM-VALIDATION.md  social-channels-prompt.md
mcp_server/: README.md  pyproject.toml  server.py
mcp_server/tools/: __init__.py  example.py  project_data.py
scripts/: altpaper.py  altsnapshot.py  desk.py  desk_calibration.py  desk_calibration_test.py  desk_copytrade.py  desk_copytrade_test.py  desk_deployers.py  desk_deployers_test.py  desk_factors.py  desk_factors_test.py  desk_features.py  desk_researcher.py  desk_researcher_test.py  desk_run.sh  desk_test.py  desk_worker.py  desk_worker_test.py  dex_signals.py  flows.py  forensics.py  health.py  health_test.py  (+17 more)
(+378 files in other folders)
